--- a/catalog.html
+++ b/catalog.html
@@ -35,6 +35,36 @@
 
     <div class="main">
         <h2>Catálogo:</h2>
+        <div class="inline">
+            <div class="card">
+                <div class="temp"></div>
+                <div class="container">
+                    <h4><b>Jogo #1</b></h4>
+                    <p>Descrição...</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="temp"></div>
+                <div class="container">
+                    <h4><b>Jogo #2</b></h4>
+                    <p>Descrição...</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="temp"></div>
+                <div class="container">
+                    <h4><b>Jogo #3</b></h4>
+                    <p>Descrição...</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="temp"></div>
+                <div class="container">
+                    <h4><b>Jogo #4</b></h4>
+                    <p>Descrição...</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="footer">
