--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 
     <script src="script/menuScript.js"></script>
 
-    <title>Início</title>
+    <title>Catálogo</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         <li><a class="logoText" href="#">Projeto EPA 2024</a></li>
         <li><a href="index.html">Início</a></li>
         <li class="active"><a href="#">Catálogo</a></li>
-        <li><a href="#">Placar</a></li>
+        <li><a href="score.html">Placar</a></li>
         <li class="right">
             <a class="openbtn" onclick="toggleMenu()" href="#">Menu</a>
         </li>
