--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a class="logoText" href="#">Projeto EPA 2024</a></li>
         <li class="active"><a href="#">Início</a></li>
         <li><a href="catalog.html">Catálogo</a></li>
-        <li><a href="#">Placar</a></li>
+        <li><a href="score.html">Placar</a></li>
         <li class="right">
             <a class="openbtn" onclick="toggleMenu()" href="#">Menu</a>
         </li>
