--- a/catalog.html
+++ b/catalog.html
@@ -33,15 +33,18 @@
         </li>
     </ul>
 
-    <div class="main">
+    <div class="main x">
         <h2>Catálogo:</h2>
         <div class="inline">
             <div class="card">
-                <div class="temp"></div>
-                <div class="container">
-                    <h4><b>Jogo #1</b></h4>
-                    <p>Descrição...</p>
-                </div>
+                <a href="games/tetris.html">
+
+                    <div class="temp"></div>
+                    <div class="container">
+                        <h4><b>Tetris</b></h4>
+                        <p>Feito por Murilo A.</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
                 <div class="temp"></div>
@@ -75,18 +78,24 @@
     </div>
 
     <footer class="footer">
-        <h4>Membros:</h4>
-        <ul>
-            <li>Ryan Ferreira</li>
-            <li>Arthur Martin</li>
-            <li>Murilo Rossi</li>
-            <li>Matheus Faria</li>
-        </ul>
-
-        <h4>Info:</h4>
-        <ul>
-            <li><a href="#">Sobre</a></li>
-        </ul>
+        <div class="footerInline">
+            <div class="footerDiv">
+                <h4>Membros:</h4>
+                <ul>
+                    <li>Ryan Ferreira</li>
+                    <li>Arthur Martin</li>
+                    <li>Murilo Rossi</li>
+                    <li>Matheus Faria</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Info:</h4>
+                <ul>
+                    <li><a href="#">Sobre</a></li>
+                </ul>
+            </div>
+        </div>
+        </div>
     </footer>
 </body>
 
