--- a/index.html
+++ b/index.html
@@ -45,18 +45,23 @@
     </div>
 
     <footer class="footer">
-        <h4>Membros:</h4>
-        <ul>
-            <li>Ryan Ferreira</li>
-            <li>Arthur Martin</li>
-            <li>Murilo Rossi</li>
-            <li>Matheus Faria</li>
-        </ul>
-
-        <h4>Info:</h4>
-        <ul>
-            <li><a href="#">Sobre</a></li>
-        </ul>
+        <div class="footerInline">
+            <div class="footerDiv">
+                <h4>Membros:</h4>
+                <ul>
+                    <li>Ryan Ferreira</li>
+                    <li>Arthur Martin</li>
+                    <li>Murilo Rossi</li>
+                    <li>Matheus Faria</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Info:</h4>
+                <ul>
+                    <li><a href="#">Sobre</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 
