--- a/score.html
+++ b/score.html
@@ -72,22 +72,32 @@
                 <td>Jg_01</td>
                 <td>100</td>
             </tr>
+            <tr>
+                <td class="bottomLeftBorder color"></td>
+                <td class="color"></td>
+                <td class="bottomRightBorder color"></td>
+            </tr>
         </table>
     </div>
 
     <footer class="footer">
-        <h4>Membros:</h4>
-        <ul>
-            <li>Ryan Ferreira</li>
-            <li>Arthur Martin</li>
-            <li>Murilo Rossi</li>
-            <li>Matheus Faria</li>
-        </ul>
-
-        <h4>Info:</h4>
-        <ul>
-            <li><a href="#">Sobre</a></li>
-        </ul>
+        <div class="footerInline">
+            <div class="footerDiv">
+                <h4>Membros:</h4>
+                <ul>
+                    <li>Ryan Ferreira</li>
+                    <li>Arthur Martin</li>
+                    <li>Murilo Rossi</li>
+                    <li>Matheus Faria</li>
+                </ul>
+            </div>
+            <div>
+                <h4>Info:</h4>
+                <ul>
+                    <li><a href="#">Sobre</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 
