--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,6 @@
         <div class="inline">
             <div class="card">
                 <a href="games/tetris.html">
-
                     <div class="temp"></div>
                     <div class="container">
                         <h4><b>Tetris</b></h4>
@@ -47,11 +46,13 @@
                 </a>
             </div>
             <div class="card">
-                <div class="temp"></div>
-                <div class="container">
-                    <h4><b>Jogo #2</b></h4>
-                    <p>Descrição...</p>
-                </div>
+                <a href="games/flappybird.html">
+                    <div class="temp"></div>
+                    <div class="container">
+                        <h4><b>Flappy Bird</b></h4>
+                        <p>Feito por Arthur M.</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
                 <div class="temp"></div>
