--- a/games/flappybird.html
+++ b/games/flappybird.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tetris</title>
+    <meta name="viewport" , content="width=device-width, initial-scale=1.0">
+    <title>Flappy Bard</title>
 
     <link rel="stylesheet" href="../style/catalog.css">
     <link rel="stylesheet" href="../global.css">
     <link rel="stylesheet" href="../style/navBar.css">
     <link rel="stylesheet" href="../style/sideMenu.css">
     <link rel="stylesheet" href="../style/gameOverPopUp.css">
+    <link rel="stylesheet" href="../style/flappybird.css">
 
     <script src="../script.js"></script>
     <script src="../script/menuScript.js"></script>
-
-    <link rel="stylesheet" href="../style/tetris.css">
+    <script src="../script/flappybird.js"></script>
 </head>
 
 <body>
@@ -37,16 +37,14 @@
     </ul>
 
     <a class="backA" href="../catalog.html">Voltar ao catálogo</a>
-    <div class="main" id="game_container">
-        <div class="center">
-            <div id="score">Score: 0</div>
-            <canvas id="tetris" width="200" height="400"></canvas>
-        </div>
+
+    <div class="main center" id="game_container">
+        <canvas id="board"></canvas>
         <div id="game_controls">
-            <button id="start_game">Iniciar Jogo</button>
+            <button onclick="startGame()" id="start_game">Iniciar Jogo</button>
         </div>
 
-        <div id="myModal" class="popUp">
+        <div id="gameOverPopUp" class="popUp">
             <div class="popUp-content">
                 <div class="popUp-header">
                     <h2>Game Over!</h2>
@@ -58,29 +56,27 @@
                     </div>
                 </div>
                 <div class="popUp-footer">
-                    <button class="send" id="restart_game" disabled>Enviar</button>
+                    <button class="send" onclick="closePopUp()">Enviar</button>
                 </div>
             </div>
         </div>
+
     </div>
     <div class="main">
         <div class="tLeft">
             <h3>Como jogar?</h3>
             <ul>
-                <li>Utilize as setas esquerda/direita para mover.</li>
-                <li>Seta para cima para rotacionar a peça.</li>
-                <li>Seta para baixo para aumentar a velocidade de caída.</li>
+                <li>Utilize a seta para cima ou espaço para subir.</li>
             </ul>
         </div>
         <div class="tRight">
             <h3>Créditos:</h3>
             <ul>
-                <li>Feito por Murilo Andrade.</li>
+                <li>Feito por Arthur Martin.</li>
                 <li>Aprimorado por Ryan Ferreira.</li>
             </ul>
         </div>
     </div>
-    <script src="../script/tetris.js"></script>
 
     <footer class="footer">
         <div class="footerInline">
