--- a/games/snake.html
+++ b/games/snake.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tetris</title>
+    <title>Snake</title>
 
     <link rel="stylesheet" href="../style/catalog.css">
     <link rel="stylesheet" href="../global.css">
@@ -15,7 +15,9 @@
     <script src="../script.js"></script>
     <script src="../script/menuScript.js"></script>
 
-    <link rel="stylesheet" href="../style/tetris.css">
+    <script src="../script/snake.js"></script>
+
+    <link rel="stylesheet" href="../style/snake.css">
 </head>
 
 <body>
@@ -39,8 +41,7 @@
     <a class="backA" href="../catalog.html">Voltar ao catálogo</a>
     <div class="main" id="game_container">
         <div class="center">
-            <div id="score">Score: 0</div>
-            <canvas id="tetris" width="200" height="400"></canvas>
+            <canvas id="snake"></canvas>
         </div>
         <div id="game_controls">
             <button id="start_game">Iniciar Jogo</button>
@@ -80,7 +81,6 @@
             </ul>
         </div>
     </div>
-    <script src="../script/tetris.js"></script>
 
     <footer class="footer">
         <div class="footerInline">
