--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
                     <div class="temp"></div>
                     <div class="container">
                         <h4><b>Tetris</b></h4>
-                        <p>Feito por Murilo A.</p>
+                        <p>Feito por Murilo Andrade.</p>
                     </div>
                 </a>
             </div>
@@ -50,16 +50,18 @@
                     <div class="temp"></div>
                     <div class="container">
                         <h4><b>Flappy Bird</b></h4>
-                        <p>Feito por Arthur M.</p>
+                        <p>Feito por Arthur Martin.</p>
                     </div>
                 </a>
             </div>
             <div class="card">
-                <div class="temp"></div>
-                <div class="container">
-                    <h4><b>Jogo #3</b></h4>
-                    <p>Descrição...</p>
-                </div>
+                <a href="games/snake.html">
+                    <div class="temp"></div>
+                    <div class="container">
+                        <h4><b>Snake</b></h4>
+                        <p>Feito por Ryan Ferreira.</p>
+                    </div>
+                </a>
             </div>
             <div class="card">
                 <div class="temp"></div>
