--- a/score.html
+++ b/score.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style/navBar.css">
     <link rel="stylesheet" href="style/sideMenu.css">
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script/score.js"></script>
     <script src="script/menuScript.js"></script>
 
     <title>Placar de Jogadores</title>
@@ -36,48 +38,146 @@
     <div class="main">
         <h2>Placar de jogadores:</h2>
 
-        <table>
-            <tr>
-                <th class="topLeftBorder">Posição</th>
-                <th>Nome</th>
-                <th class="topRightBorder">Pontuação</th>
-            </tr>
-            <tr>
-                <td>#01</td>
-                <td>Jg_01</td>
-                <td>100</td>
-            </tr>
-            <tr>
-                <td>#01</td>
-                <td>Jg_01</td>
-                <td>100</td>
-            </tr>
-            <tr>
-                <td>#01</td>
-                <td>Jg_01</td>
-                <td>100</td>
-            </tr>
-            <tr>
-                <td>#01</td>
-                <td>Jg_01</td>
-                <td>100</td>
-            </tr>
-            <tr>
-                <td>#01</td>
-                <td>Jg_01</td>
-                <td>100</td>
-            </tr>
-            <tr>
-                <td>#01</td>
-                <td>Jg_01</td>
-                <td>100</td>
-            </tr>
-            <tr>
-                <td class="bottomLeftBorder color"></td>
-                <td class="color"></td>
-                <td class="bottomRightBorder color"></td>
-            </tr>
-        </table>
+        <div class="tabs">
+            <button class="tab-link" data-tab="jogo1">Jogo 1</button>
+            <button class="tab-link" data-tab="jogo2">Jogo 2</button>
+            <button class="tab-link" data-tab="jogo3">Jogo 3</button>
+        </div>
+
+        <div id="jogo1" class="tab-content">
+            <table>
+                <tr>
+                    <th>Posição</th>
+                    <th>Nome</th>
+                    <th class="topRightBorder">Pontuação</th>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td class="bottomLeftBorder color"></td>
+                    <td class="color"></td>
+                    <td class="bottomRightBorder color"></td>
+                </tr>
+            </table>
+        </div>
+
+        <div id="jogo2" class="tab-content">
+            <table>
+                <tr>
+                    <th >Posição</th>
+                    <th>Nome</th>
+                    <th class="topRightBorder">Pontuação</th>
+                </tr>
+                <tr>
+                    <td>#02</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td class="bottomLeftBorder color"></td>
+                    <td class="color"></td>
+                    <td class="bottomRightBorder color"></td>
+                </tr>
+            </table>
+        </div>
+
+        <div id="jogo3" class="tab-content">
+            <table>
+                <tr>
+                    <th >Posição</th>
+                    <th>Nome</th>
+                    <th class="topRightBorder">Pontuação</th>
+                </tr>
+                <tr>
+                    <td>#03</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>#01</td>
+                    <td>Jg_01</td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td class="bottomLeftBorder color"></td>
+                    <td class="color"></td>
+                    <td class="bottomRightBorder color"></td>
+                </tr>
+            </table>
+        </div>
     </div>
 
     <footer class="footer">
