--- a/score.html
+++ b/score.html
@@ -39,9 +39,9 @@
         <h2>Placar de jogadores:</h2>
 
         <div class="tabs">
-            <button class="tab-link" data-tab="jogo1">Jogo 1</button>
-            <button class="tab-link" data-tab="jogo2">Jogo 2</button>
-            <button class="tab-link" data-tab="jogo3">Jogo 3</button>
+            <button class="tab-link tab" data-tab="jogo1">Jogo 1</button>
+            <button class="tab-link tab" data-tab="jogo2">Jogo 2</button>
+            <button class="tab-link tab" data-tab="jogo3">Jogo 3</button>
         </div>
 
         <div id="jogo1" class="tab-content">
